2001-09-18  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c:
	* dae/oprofiled.h: implement hashing of images

	* doc/oprofile.sgml: fix -- issue and use <screen>
 
2001-09-18  John Levon  <moz@compsoc.man.ac.uk>

	* .cvsignore:
	* README: update
 
	* configure.in: small cleanup
 
	* op_init.c: add comment

	* oprofile.h: 
	* op_syscalls.c:
	* op_x86.c: move fixmap stuff, remove disable APIC

	* oprofile.c: init failure fix 
 
	* doc/oprofile.sgml:
	* dae/opd_proc.c: fix handle_old_sample_files() bug,
	  check mtime hasn't changed on a new map
 
2001-09-16  John Levon  <moz@compsoc.man.ac.uk>

	* acinclude.m4:
	* autogen.sh:
	* configure.in: 
	* gui/Makefile.in:
	* gui/ui/Makefile.in:
	* gui/ui/oprof_start.base.ui: 
	* gui/oprof_start.h: autoconfiscation for Qt2

	* gui/oprof_start_config.cpp: add comments
 
2001-09-16  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.cpp: fix unrecognized input
	* pp/opf_container.cpp: better error messages. put
	  op_nr_counters in the global namespace (gcc 2.91
	  work around)

2001-09-16  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.cpp: small tidy
 
2001-09-16  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.cpp: minor tidy

	* gui/oprof_start.base.ui: new oprof_start gui
	* gui/oprof_start.cpp: new, derived class of oprof_start_base
	* gui/oprof_start.h: ditto
	* gui/oprof_start_impl.cpp: implementation of oprof_start class
	* gui/oprof_start_config.cpp: utilities function for oprof_start
	* gui/oprof_start_config.h: ditto
	* gui/persistent_config.h: utility template
	* gui/oprof_start_main.cpp: main() for oprof_start
	* gui/Makefile.in: handle this stuff

2001-09-15  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.c: some cleanup
 
2001-09-15  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.c: allow non-matching mtimes in order
	  to allow pp on different machines. Make conflicting
	  counter specifications a fatal error

2001-09-15  John Levon  <moz@compsoc.man.ac.uk>
